about me section

--- a/index.html
+++ b/index.html
@@ -59,12 +59,47 @@
         </section>
         <section class="s2">
             <div class="main-container">
-                <div about-wrapper>
+                <div class="about-wrapper">
                     <div class="about-me">
-
-                    </div>
+                        <h4>More about me</h4>
+                        <p>I build responsive websites, web applications, and mobile apps</p>
+                        <p>I would love the chance to interview for great teams & projects where I can 
+                            contribute and build software
+                        </p>
+                        <hr>
+                        <h4>TOP EXPERTISE</h4>
+                        <p>Fullstack developer with a primary focuc on Django + React:
+                            <a target="_blank" href="Christian McCarron CV.pdf">Download Resume</a>
+                        </p>
+                        <div id="skills">
+                            <ul>
+                                <li>Python</li>
+                                <li>Django</li>
+                                <li>React</li>
+                                <li>Java</li>
+                                <li>MongoDB</li>
+                                <li>Postgres</li>
+                            </ul>
+                            <ul>
+                                <li>JavaScript</li>
+                                <li>AWS</li>
+                                <li>HTML/CSS</li>
+                                <li>Skill</li>
+                                <li>Skill</li>
+                                <li>Skill</li>
+                            </ul>
+                        </div>
+                    </div> 
                     <div class="social-link">
-
+                        <img id="social_image" src="images/space-x.jpg">
+                        <h3>Find me on Linkedin and Github</h3>
+                        <a target="_blank" href="https://www.linkedin.com/in/christian-mccarron/">
+                        Linkedin: Christian McCarron 
+                        </a>
+                        <br>
+                        <a target="_blank" href="https://github.com/Cgmccarr">
+                        Github: Cgmccarr
+                        </a>
                     </div>
                 </div>
             </div>
